src/test/deca/context/invalid/extension/Array_void.deca
// The base Type of this array can not be void
// Description : test with an array of type void
// Result : error line 6

{
    void[] x;
}